// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown: render should return base dropdown with passed array value 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  value={Array []}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return base dropdown with passed number value 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  value={1}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return base dropdown with passed string value 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  value="testValue"
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return base dropdown with required fields 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return clearable dropdown 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={true}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return dropdown with passed name 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  name="testName"
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return dropdown with shifting viewport enabled 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={true}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return filter dropdown 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown ui-dropdown_filter ui-dropdown_state-active"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={true}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={
    Array [
      Object {
        "checked": true,
      },
    ]
  }
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return multi dropdown 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={true}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={false}
  simpleValue={false}
  tabSelectsValue={true}
  valueComponent={[Function]}
  valueKey="value"
/>
`;

exports[`DropDown: render should return searchable dropdown 1`] = `
<Select
  addLabelText="Add \\"{label}\\"?"
  arrowRenderer={[Function]}
  autosize={true}
  backspaceRemoves={true}
  backspaceToRemoveMessage="Press backspace to remove {label}"
  className="ui-dropdown"
  clearAllText="Clear all"
  clearRenderer={[Function]}
  clearValueText="Clear value"
  clearable={false}
  deleteRemoves={true}
  delimiter=","
  disabled={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  ignoreAccents={true}
  ignoreCase={true}
  inputProps={Object {}}
  isLoading={false}
  joinValues={false}
  labelKey="label"
  matchPos="any"
  matchProp="any"
  menuBuffer={0}
  menuRenderer={[Function]}
  multi={false}
  noResultsText="No results found"
  onBlurResetsInput={true}
  onChange={[Function]}
  onCloseResetsInput={true}
  openAfterFocus={false}
  optionComponent={[Function]}
  options={Array []}
  pageSize={5}
  placeholder=""
  required={false}
  scrollMenuIntoView={false}
  searchable={true}
  simpleValue={false}
  tabSelectsValue={true}
  valueComponent={[Function]}
  valueKey="value"
/>
`;
